--- a/README.org
+++ b/README.org
@@ -5,10 +5,16 @@ This repository contains Julia implementations of some machine-learning algorith
 
 * Contents
 
+"Bare" (i.e. using just basic Julia, except for loading the MNIST data) examples:
+
 - =classifier_v1.jl= :: A Julia module implementing the multiple-layer network classifier discussed in Chapter 1 of Nielsen's book.
 - =driver_v1.jl= :: Driver for the classifier above, training it with MNIST digit database (requires the ~MLDatasets~ package).  After training, the script classifies a few of the test samples and displaying the original images.  Image displaying is done with the =ImageView= package, if you don't want to install it you must comment out the relevant lines.
 - =classifier_v2.jl= :: More flexible version of =classifier_v1=, including optional regularisation, improved weight initialisation and choice of cost function (quadratic or cross-entropy).
 - =driver_v2.jl= :: Driver to train =classifier_v2.jl= with MNIST digits
+
+Using =Flux=.
+
+- =flux_gradient.jl= :: A brief test of =Flux='s gradient-taking capabilites
 
 
 * Copyright and license
